# autodocs

./: .env  example.env  main.py  pyproject.toml  todo.md
configuration/: change_file_request.md  change_files_request.md  custom_request.md  files_to_change_request.md  ruleset.md
docs/main/: config.md  docs_generator.md  docs_manager.md  git_tracker.md
docs/main/docsapi/: yandexwiki.md
docs/main/llm/: llm.md
docs/services/layouts/: api.md
docs/services/llm/ollama/: api.md
docs_templates/: api.md  library.md  package.md  todo.md  userguide.md  web_api.md
main/: config.py  docs_generator.py  docs_manager.py  docs_synchronizer.py  documentation_pipeline.py  git_tracker.py  synchronizer.py  yandexwiki_sync.py
main/autodocs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
main/data/: last_commit.json  last_commit.txt
main/docsapi/: docsapi.py  yandexwiki.py
main/documents/: Document.py  docs_generator.py  docs_manager.py  docs_synchronizer.py  orchestrator.py
main/llm/: cerebras.py  claude.py  llm.py  llmagent.py  ollama.py  openai.py  qwen.py
main/logging/: logging.py
